--- a/2.html
+++ b/2.html
@@ -11,10 +11,8 @@
     <li><a href="2.html">I'll be your family!</a></li>
     <li><a href="3.html">우주를 건너</a></li>
   </ol>
-  <h4>Who's <a href="https://search.naver.com/search.naver?where=nexearch&sm=tab_jum&query=%EB%B0%B1%EC%98%88%EB%A6%B0" target="_blank" title="click!">YerinB</a>?</h4>
-    <img src="yerinb.jfif" width="300">
-    <br>her album art
   <h2>I'll be your family!</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/m45t1ezxq3E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p>you were always so alone and young we are grown but the same i've got no alone
   <br> i could use <u>my love</u> to be your friend(it's awful) but <strong>i'll be your family</strong></p>
 </body>
