--- a/1.html
+++ b/1.html
@@ -11,10 +11,8 @@
     <li><a href="2.html">I'll be your family!</a></li>
     <li><a href="3.html">우주를 건너</a></li>
   </ol>
-  <h4>Who's <a href="https://search.naver.com/search.naver?where=nexearch&sm=tab_jum&query=%EB%B0%B1%EC%98%88%EB%A6%B0" target="_blank" title="click!">YerinB</a>?</h4>
-    <img src="yerinb.jfif" width="300">
-    <br>her album art
-  <h2>Popo(How deep is our love?)</h2>
+    <h2>Popo(How deep is our love?)</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/AkXZV0PVSn8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p>get away from your own <strong>sorrow</strong> let the sun come through your window you don't have to open up wide but i want to <u>intimate</u>
   <br>now you know how much your voice attracts me boy it's exceptional especially when you playing the song for me i can't take my eyes away</p>
 </body>
