--- a/3.html
+++ b/3.html
@@ -11,10 +11,8 @@
     <li><a href="2.html">I'll be your family!</a></li>
     <li><a href="3.html">우주를 건너</a></li>
   </ol>
-  <h4>Who's <a href="https://search.naver.com/search.naver?where=nexearch&sm=tab_jum&query=%EB%B0%B1%EC%98%88%EB%A6%B0" target="_blank" title="click!">YerinB</a>?</h4>
-    <img src="yerinb.jfif" width="300">
-    <br>her album art
   <h2>우주를 건너</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/cQuqs2LrXbo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p>너와 나 사이의 <strong>우주를 건너</strong> 내게로 would you like to <u>come over to me</u>
   <br>너와 나 사이의 <strong>우주를 건너</strong> 내게로 다가와줘 더이상 기다리게 하지 마</p>
 </body>
