--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>YERINB-PoPo(How deep is our love?)</title>
+  <title>YERINB-Popo(How deep is our love?)</title>
   <meta charset="utf-8">
 </head>
 <body>
